force-app/main/default/objects/TASKRAY__trProjectInboxNotification__c/TASKRAY__trProjectInboxNotification__c.object-meta.xml
<CustomObject>
    <description>This is a TaskRay &quot;behind the scenes&quot; object that is used for in-app project notifications.</description>
    <label>TaskRay Project Inbox Notification</label>
    <nameField>
        <label>TaskRay Project Inbox Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Project Inbox Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>