force-app/main/default/objects/TASKRAY__trProjectInboxNotification__c/fields/TASKRAY__trNotificationColor__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trNotificationColor__c</fullName>
    <label>Notification Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>