force-app/main/default/objects/TASKRAY__trProjectInboxNotification__c/fields/TASKRAY__trNotificationType__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trNotificationType__c</fullName>
    <label>Notification Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>