force-app/main/default/objects/TASKRAY__trProjectInboxNotification__c/fields/TASKRAY__trNotifiedUser__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trNotifiedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notified User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TaskRay_Project_Inbox_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>